added user update

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+.bin
 
 # Flask stuff:
 instance/
@@ -84,6 +85,7 @@ ipython_config.py
 
 # pyenv
 .python-version
+.pyenv.cfg
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
