--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+.bin
 
 # Flask stuff:
 instance/
@@ -84,6 +85,8 @@ ipython_config.py
 
 # pyenv
 .python-version
+.pyvenv.cfg
+pyvenv.cfg
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -110,6 +113,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+bin/
 
 # Spyder project settings
 .spyderproject
@@ -135,3 +139,6 @@ User_Data/
 
 # DS Store
 *.DS_Store
+debug.log
+debug.log
+debug.log
