--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ downloads/
 eggs/
 .eggs/
 lib/
+bin/
 lib64/
 parts/
 sdist/
@@ -61,7 +62,6 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-.bin
 
 # Flask stuff:
 instance/
@@ -85,8 +85,6 @@ ipython_config.py
 
 # pyenv
 .python-version
-.pyvenv.cfg
-pyvenv.cfg
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -113,7 +111,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-bin/
+pyenv.cfg
+.pyenv.cfg
 
 # Spyder project settings
 .spyderproject
@@ -139,6 +138,10 @@ User_Data/
 
 # DS Store
 *.DS_Store
-debug.log
-debug.log
+
+#virtualenv
+group_project/
+
+
+
 debug.log
